Major updates: Dynamic data loading, social media admin, clinic name fixes
- Added dynamic data loading with hooks (useDoctors, useServices, useVacancies)
- Created social media admin panel for managing social links
- Fixed clinic name to 'Health Clinic' everywhere
- Added Instagram to social chat modal
- Fixed phone number in social chat
- Removed appointment button from footer
- Added data initialization and cache clearing utilities
- Updated all pages to use dynamic data instead of static mockData
- Added authentication check to admin layout
- Improved admin panel with social media management

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Здоров'я+",
-  "name": "Поліклініка Здоров'я+",
+  "short_name": "Health Clinic",
+  "name": "Health Clinic",
   "icons": [
     {
       "src": "favicon.ico",
